Fix text alignment

--- a/src/Components/Throbber.css
+++ b/src/Components/Throbber.css
@@ -8,7 +8,7 @@
   font-size: 40px;
   letter-spacing: 1rem;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 52.5%;
   transform: translate(-50%, -50%);
 }
